--- a/uno.html
+++ b/uno.html
@@ -14,22 +14,21 @@
         .game-controls button:hover{background:rgba(255,255,255,.2)}
         .paused-overlay{position:absolute; inset:0; background:rgba(0,0,0,.45); color:#fff; display:none; align-items:center; justify-content:center; font:600 1.1rem system-ui; z-index:2}
         .paused-overlay.show{display:flex}
-        .debug-panel{background:#111; color:#cfcfcf; border:1px solid #333; border-radius:8px; padding:10px; font:12px ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace;}
-        .debug-panel .row{margin:.25rem 0}
-        .debug-panel code{color:#7dd3fc}
-        .debug-toggle{margin-top:8px}
     </style>
 
     <script>
-        // ---- Preload scaffold (CheerpJ 4.x, Java 17) ----
-        const PRELOAD_RESOURCES = null; // Paste JSON from cjGetRuntimeResources() after first successful run
+        // ===== CheerpJ preload with race-proof init (CJ 4.x, Java 17) =====
+        const PRELOAD_RESOURCES = null; // paste JSON from cjGetRuntimeResources() later
         let cjReady = false;
+        let cjInitPromise = null; // guards concurrent init calls
+
         async function initCheerpJWithPreload() {
-            if (cjReady) return;
+            if (cjReady) return true;
+            if (cjInitPromise) return cjInitPromise; // wait for in-flight init
 
             const loadingEl = document.querySelector('.game-loading');
             const opts = {
-                version: 17,            // IMPORTANT: your UNO.jar targets Java 17
+                version: 17, // your JAR targets Java 17
                 status: "default",
                 preloadProgress: (done, total) => {
                     if (!loadingEl) return;
@@ -41,37 +40,47 @@
                 opts.preloadResources = PRELOAD_RESOURCES;
             }
 
-            await cheerpjInit(opts);
-            cjReady = true;
+            cjInitPromise = (async () => {
+                await cheerpjInit(opts);
+                cjReady = true;
+                // Helper on first run: print optimal preload list
+                if (!PRELOAD_RESOURCES && typeof cjGetRuntimeResources === "function") {
+                    try {
+                        const obj = await cjGetRuntimeResources();
+                        console.log("%cCopy this into PRELOAD_RESOURCES:", "font-weight:bold");
+                        console.log(JSON.stringify(obj, null, 2));
+                    } catch {}
+                }
+                return true;
+            })();
 
-            if (!PRELOAD_RESOURCES && typeof cjGetRuntimeResources === "function") {
-                cjGetRuntimeResources().then(obj => {
-                    console.log('%cCopy this into PRELOAD_RESOURCES:', 'font-weight:bold');
-                    console.log(JSON.stringify(obj, null, 2));
-                }).catch(()=>{});
+            try {
+                return await cjInitPromise;
+            } finally {
+                // keep the resolved promise for future callers; if it rejected, allow retries
+                if (!cjReady) cjInitPromise = null;
             }
         }
 
-        // ---- GitHub Pages–friendly resolver ----
+        // GitHub Pages–friendly resolver → returns CheerpJ path (with /app prefix)
         async function resolveAppPath(appRelativePath) {
-            // e.g. "JAR/UNO.jar"
             const base = window.location.pathname.replace(/[^/]*$/, ''); // '/repo/' or '/'
             const realUrls = [ base + appRelativePath, '/' + appRelativePath.replace(/^\/+/, '') ];
             for (const realUrl of realUrls) {
                 try {
                     const r = await fetch(realUrl, { method: 'HEAD', cache: 'no-store' });
-                    if (r.ok) return '/app' + realUrl; // return CheerpJ path for the VM
+                    if (r.ok) return '/app' + realUrl;
                 } catch {}
             }
             throw new Error('UNO.jar not found at: ' + realUrls.join(' , '));
         }
 
-        // ---- UNO launcher (single flow; no cheerpjAddClasspath in CJ4) ----
+        // ===== UNO launcher =====
         async function runUno(e) {
             if (e) e.preventDefault();
             const btn = document.getElementById('play-uno');
 
-            // Create the stage if missing
+            // Create stage on first run
             let stage = document.getElementById('uno-stage');
             if (!stage) {
                 stage = document.createElement('div');
@@ -112,13 +121,11 @@
             if (icon) icon.textContent = '⏳';
 
             try {
-                await initCheerpJWithPreload();
+                await initCheerpJWithPreload(); // race-proofed
 
-                // Resolve GitHub Pages path (returns e.g. '/app/<repo>/JAR/UNO.jar')
                 const jarAppPath = await resolveAppPath('JAR/UNO.jar');
                 console.log('Using JAR path:', jarAppPath);
 
-                // Create display and run main class (CJ4 signature: runMain(class, classPath, args))
                 const display = cheerpjCreateDisplay(-1, -1, stage);
                 display.style.width = '100%';
                 display.style.height = '100%';
@@ -137,11 +144,10 @@
             }
         }
 
-        // Warm up on load to reduce time-to-first-frame
+        // Warm up on load; safe even if user clicks during init
         window.addEventListener('load', async () => { try { await initCheerpJWithPreload(); } catch {} });
     </script>
 </head>
-
 <body>
 <div class="header">
     <div class="branding d-flex align-items-center">
@@ -178,15 +184,12 @@
         <div class="description-box">
             <h3 data-i18n="gameDescriptionUno"></h3>
         </div>
-        <div id="debug-wrap" class="debug-panel d-none">
-            <div class="row"><strong>Debug log</strong></div>
-            <pre id="debug-log"></pre>
-        </div>
     </section>
 </main>
 
 <script src="main.js"></script>
 <script>
+    // Login gate: redirect if not logged in
     if (localStorage.getItem('loggedIn') !== 'true') {
         const current = window.location.pathname.split('/').pop().replace('.html','');
         window.location.replace('login.html?target=' + current);
